[project]
name = "minesweeper-kivy"
version = "0.1.0"
description = "A minesweeper game builded on kivy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kivy>=2.3.1",
    "kivymd==2.0.1",
]

[tool.uv.sources]
kivymd = { url = "https://github.com/kivymd/KivyMD/archive/master.zip" }
